--- a/assignments/session05/microblog/microblog.cfg
+++ b/assignments/session05/microblog/microblog.cfg
@@ -1,2 +1,3 @@
-# application configuration for a Flask microblog
+#application configuration for a Flask microblog
+SECRET_KEY = 'nathanchan'
 DATABASE = 'microblog.db'
